# pdf-metadata-enhancer

./: .gitignore  .nojekyll  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  IMPLEMENTATION_SUMMARY.md  LICENSE-AGPL.html  LICENSE-CCBY.html  README.md  README.template.md  SECURITY.html  SECURITY.md  _brand.yml  _quarto.yml  cliff.toml  index.qmd  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  robots.txt  run_tests.py  search.json  sitemap.xml  todo.html  todo.md
.github/ISSUE_TEMPLATE/: config.yml
data/raw/: example.csv  example.jsonl  example.tsv
sgb/: README.md  dois.txt  metadata.json
site_libs/bootstrap/: bootstrap-947d5e9d19f34792e439167f79588bc5.min.css
site_libs/quarto-contrib/quarto-project/Stadt-Geschichte-Basel/sgb-theme/: styles.css
src/pdf_metadata_enhancer/: cli.py  input_parser.py  metadata_fetcher.py  pdf_enhancer.py  sidecar.py
src/scripts/: get_metadata.py  metadata.json
test/: test_input_parser.py  test_pdf_enhancer.py  test_sidecar.py
