[project]
name = "pdf-metadata-enhancer"
version = "0.1.0"
description = "Tools and workflows for enhancing PDF metadata for digital preservation and accessibility"
authors = [
    {name = "Moritz Mähr", email = "moritz.maehr@unibas.ch"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pikepdf>=9.0.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.13.0",
]

dependency-groups.dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[project.scripts]
pdf-metadata-enhancer = "pdf_metadata_enhancer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
